--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: Fimlarin
-version: 1.1-dev
+author: liliana
 main: dev.liliana.fimlarin.Main
 api-version: '1.21'
+website: 'https://liliana.dev'
